--- a/style/styles.css
+++ b/style/styles.css
@@ -2235,7 +2235,7 @@ header {
     font-size: 0.85rem;
 }
 
-/* MAIN CONTENT */
+/* CONTENIDO PRINCIPAL */
 .dashboard-main {
     grid-column: 2;
     grid-row: 1 / 3;
@@ -2261,7 +2261,7 @@ header {
     margin: 0.5rem 0 0 0;
 }
 
-/* SECONDARY FILTERS */
+/* OTROS FILTROS */
 .dashboard-secondary-filters {
     display: flex;
     flex-wrap: wrap;
@@ -2385,6 +2385,10 @@ header {
     background: #ff8800;
     transform: translateY(-3px);
     
+
+
+
+
 }/* ========== PAGINACIÓN ========== */
 
 .dashboard-pagination {
@@ -2437,7 +2441,7 @@ header {
     padding: 0.7rem 1.2rem;
 }
  
-/* ========== PÁGINA DE EVENTO (evento.html) ========== */
+/* PÁGINAAAAA DE EVENTO */
  
 .evento-body {
     background-color: #0A192F;
@@ -3020,4 +3024,3 @@ header {
     margin: 0;
     font-weight: normal;
 }
- 
