RUN AND EAT (mejora)

--- a/style/styles.css
+++ b/style/styles.css
@@ -16,7 +16,7 @@
  * contiene estilos específicos para cada sección y página de la aplicación. No obstante,
  * esta estructura permite una mayor claridad, mantenimiento y personalización del diseño
  * en futuras ampliaciones del proyecto.
- *
+ * Solo dios y nosotros sabemos como funciona este codigo ;)
  * Autores:
  * Ignacio Breñas
  * Gorka Ramírez
